Falta Test FindAllNotEmpty (es possible hacer mock?)